--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Install dependencies
       run: flutter pub get
 
-    - name: Build APK
-      run: flutter build apk --release
+    - name: Build APK (debug)
+  run: flutter build apk --debug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
