--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -2,29 +2,31 @@ name: Build APK
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: '3.10.6'  # Known stable version
+      - uses: dart-lang/setup-dart@v1
 
-    - name: Install dependencies
-      run: flutter pub get
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.13.9'  # ✅ Use stable version
+          channel: 'stable'
 
-    - name: Build APK (debug)
-      run: flutter build apk --debug
+      - name: Install dependencies
+        run: flutter pub get
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: PayFit-APK
-        path: build/app/outputs/flutter-apk/app-debug.apk
+      - name: Build APK
+        run: flutter build apk --debug
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: payfit-debug-apk
+          path: build/app/outputs/flutter-apk/app-debug.apk
