--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -16,7 +16,7 @@ jobs:
 
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.13.9'  # ✅ Use stable version
+          flutter-version: '3.13.9'
           channel: 'stable'
 
       - name: Install dependencies
@@ -25,8 +25,8 @@ jobs:
       - name: Build APK
         run: flutter build apk --debug
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3
+      - name: Upload APK Artifact
+        uses: actions/upload-artifact@v4
         with:
           name: payfit-debug-apk
           path: build/app/outputs/flutter-apk/app-debug.apk
